--- a/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
+++ b/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
@@ -9,7 +9,7 @@
                  ng-class="{ 'has-success': ctrl.form.type.$valid && ctrl.form.$submitted,
                              'has-error': ctrl.form.type.$invalid && ctrl.form.$submitted }">
                 <div class="col-xs-12">
-                    <select name="type" class="form-control" ng-model="ctrl.data.type"
+                    <select name="type" class="form-control" ng-model="ctrl.data.inviteType"
                             ng-options="type.value as type.label for type in ctrl.types" required>
                         <option value="">Select a Category...</option>
                     </select>
@@ -44,6 +44,10 @@
                     </div>
                 </div>
             </div>
+            <div class="form-group">
+                <textarea class="form-control" rows="5" ng-model="ctrl.data.messageBody"></textarea>
+            </div>
+
             <div class="form-group">
                 <div class="col-xs-12">
                     <button class="btn btn-block btn-primary" ng-click="ctrl.invite()"
