--- a/src/main/webapp/source/scripts/modules/registration/components/musician-registration-form.template.html
+++ b/src/main/webapp/source/scripts/modules/registration/components/musician-registration-form.template.html
@@ -79,7 +79,7 @@
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                             <input type="password" name="confPassword" class="form-control" ng-model="ctrl.data.confPassword"
-                                   placeholder="Password..." ng-minlength="8" required
+                                   placeholder="Confirm Your Password..." ng-minlength="8" required
                                    mll-input-match="ctrl.data.password" />
                         </div>
                         <div class="alert alert-danger" role="alert"
@@ -102,7 +102,7 @@
 
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
-                <div class="alert alert-danger" role="alert" ng-show="ctrl.loginForm.$serverError">
+                <div class="alert alert-danger" role="alert" ng-show="ctrl.registrationForm.$serverError">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span ng-bind="ctrl.errorMessage"></span>
                 </div>
@@ -114,5 +114,6 @@
                 <button  class="btn btn-primary btn-block" ng-click="ctrl.register()">Register</button>
             </div>
         </div>
+
     </form>
 </div>
